Added save/restore session
Added simple bookmarks

0.0.8
Can now use escapes in search/replace \n, \t etc.
Added monitor for file changed on disk.
Code clean.
Added go to line number in navigation menu.
Added run async external tool.
Help now runs async.
Set new env variable to selected text.
Added Find API to installed tools.

0.0.9
Added external tool creater GUI.
Bug fix crash on closing empty new tab.
Set senitive on save/saveas buttons menu items on startup.
Completly redone external tools.
Checked build with lower version of gtksourceview (2.9.9) but 2.11.1 recommended.
Added GUI to build external tools.

0.0.10
Bug fix - seg fault on run external tool with no tabs.
Added Replace all
Added 'Go To Definition' to popup menu in document.
Added popup menu to tabs to copy filepath/name.

0.0.11
Added selected function def to popupmenu.
Added show functions def in popupmenu.
Fixed defines that contain : or / not displaying.
Added version number to tarball.
Strpped whitespace from bookmark label;
Go To Definition not shown in popup if not available.
Selecting function def in popup copies def to clipboard.
Added new icon.
Code clean.
Set recursive search for tags (default = 1).
Added Search For Define to Navigation menu.

0.0.12
Do simple conversion to/from UTF-8.
Added "Open As Hexdump" to file menu.
Added number to untitled docs.
Made application single instance.
Major Code clean.
Added select single/multi instance to prefs.
Prefs applied immediately  ( again! ).

0.0.13
Added crude function lookup in gtk-doc folder - to be improved.
Added optional webkit dependency if building doc viewer.
Added gkt-doc viewer in own window via webkit.
Added switch to configure for optional gkt-doc viewer.
Added 'Save All'
Added 'Help' now shown local if doc viewer has been built.
Redone demo installed external tools.
Fixed autogen.sh only passing first option on command line.

0.0.14
Removed redundant close button from toolbar.
Added printing.
Improved Gtk Doc search.
Code clean.