@@ -468,9 +468,6 @@ void buildMainGui(void)
 	gtk_menu_shell_append(GTK_MENU_SHELL(menu),menuitem);
 	gtk_signal_connect(GTK_OBJECT(menuitem),"activate",G_CALLBACK(restoreSession),NULL);
 
-//	menuitem=gtk_separator_menu_item_new();
-//	gtk_menu_shell_append(GTK_MENU_SHELL(menu),menuitem);
-
 //printfile
 	menuitem=gtk_image_menu_item_new_from_stock(GTK_STOCK_PRINT,NULL);
 	gtk_menu_shell_append(GTK_MENU_SHELL(menu),menuitem);
@@ -737,14 +734,31 @@ int showFunctionEntry(void)
 }
 
 #ifdef BUILDDOCVIEWER
+void liveGtkDocSearch(GtkWidget* widget,gpointer data)
+{
+	const char*	thestring=gtk_entry_get_text((GtkEntry*)data);
+
+	docSearch(NULL,(void*)thestring);
+
+	if(thePage!=NULL)
+		{
+			webkit_web_view_load_uri(webView,thePage);
+			g_free(thePage);
+			thePage=NULL;
+		}
+	gtk_widget_show_all(docView);
+	gtk_window_present((GtkWindow*)docView);
+}
+
 void buildGtkDocViewer(void)
 {
 	GtkWidget*	vbox;
 	GtkWidget*	hbox;
 	GtkWidget*	button;
 	GtkWidget*	scrolledWindow;
-	
-	
+	GtkWidget*	entry;
+	GtkWidget*	findbutton;
+
 	docView=gtk_window_new(GTK_WINDOW_TOPLEVEL);
 	gtk_window_set_default_size(GTK_WINDOW(docView),800,600);
 	gtk_window_set_title((GtkWindow*)docView,"Search Gtk Docs");
@@ -759,11 +773,18 @@ void buildGtkDocViewer(void)
     gtk_container_add(GTK_CONTAINER(scrolledWindow),GTK_WIDGET(webView));
 
     gtk_container_add(GTK_CONTAINER(vbox),scrolledWindow);
-   
+
     button=gtk_button_new_from_stock(GTK_STOCK_GO_BACK);
     gtk_box_pack_start(GTK_BOX(hbox),button,false,false,0);
     g_signal_connect(G_OBJECT(button),"clicked",G_CALLBACK(webKitGoBack),(void*)webView);	
-    
+ 
+    entry=gtk_entry_new();
+    gtk_box_pack_start(GTK_BOX(hbox),entry,false,false,0);
+	g_signal_connect_after(G_OBJECT(entry),"activate",G_CALLBACK(liveGtkDocSearch),(void*)entry);
+    findbutton=gtk_button_new_from_stock(GTK_STOCK_FIND);
+    gtk_box_pack_start(GTK_BOX(hbox),findbutton,false,false,0);
+    g_signal_connect(G_OBJECT(findbutton),"clicked",G_CALLBACK(liveGtkDocSearch),(void*)entry);	
+
     button=gtk_button_new_from_stock(GTK_STOCK_GO_FORWARD);
     gtk_box_pack_start(GTK_BOX(hbox),button,false,false,0);
     g_signal_connect(G_OBJECT(button),"clicked",G_CALLBACK(webKitGoForward),(void*)webView);	
