@@ -23,5 +23,6 @@ void showDocView(GtkWidget* widget,gpointer data);
 void doFindReplace(GtkDialog *dialog,gint response_id,gpointer user_data);
 void find(GtkWidget* widget,gpointer data);
 void doSearchPrefs(GtkWidget* widget,gpointer data);
+void docSearch(GtkWidget* widget,gpointer data);
 
 #endif
