@@ -84,3 +84,5 @@ Removed redundant close button from toolbar.
 Added printing.
 Improved Gtk Doc search.
 Code clean.
+Only recursivly search for define form main menu not pop-up ( for speed ).
+Added manual search box to gtk-doc viewer.
